update json references to include full class paths for resource schemas
